# claude-setup

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
.claude/: todo.md
docs/superpowers/plans/: 2026-06-13-loader-payload-integration.md
docs/superpowers/specs/: 2026-06-13-claude-setup-design.md
src/claude_setup/: __init__.py  __main__.py  config.py  keys.py  loader.py  repos.py  secrets.py  wizard.py
src/claude_setup/templates/: main_mode_a.py.j2  main_mode_b.py.j2
